crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_fixed_range_auto_color2_optimized.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(FooKeywords { Auto : "auto", });
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo {
    Auto(::css_parse::T![Ident]),
    Colors(types::Color, types::Color),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <types::Color>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        if let Some(keyword) = p.parse_if_peek::<FooKeywords>()? {
            use ::css_parse::Build;
            match keyword {
                FooKeywords::Auto(c) => {
                    return Ok(Self::Auto(<::css_parse::T![Ident]>::build(p, c)));
                }
            }
        }
        let val1 = p.parse::<types::Color>()?;
        let val2 = p.parse::<types::Color>()?;
        Ok(Self::Colors(val1, val2))
    }
}
#[automatically_derived]
impl ::css_parse::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Auto(inner) => {
                s.append(inner.into());
            }
            Self::Colors(inner1, inner2) => {
                ::css_parse::ToCursors::to_cursors(inner1, s);
                ::css_parse::ToCursors::to_cursors(inner2, s);
            }
        }
    }
}
