crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_lone_type_with_lifetime.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo<'a>(pub types::Image<'a>);
#[automatically_derived]
impl<'a> ::hdx_parser::Peek<'a> for Foo<'a> {
    fn peek(p: &::hdx_parser::Parser<'a>) -> bool {
        use ::hdx_parser::Peek;
        p.peek::<types::Image>()
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::hdx_parser::Parser<'a>) -> ::hdx_parser::Result<Self> {
        use ::hdx_parser::Parse;
        let val = p.parse::<types::Image>()?;
        Ok(Self(val))
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::ToCursors for Foo<'a> {
    fn to_cursors(&self, s: &mut impl ::hdx_parser::CursorSink) {
        ::hdx_parser::ToCursors::to_cursors(&self.0, s);
    }
}
