crates/hdx_proc_macro/src/snapshots/hdx_proc_macro__test__value_with_multiplier_range.snap
---
source: crates/hdx_proc_macro/src/test.rs
expression: pretty
---
#[derive(Debug, PartialEq, Clone, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo(pub ::smallvec::SmallVec<[Length; 2usize]>);
#[automatically_derived]
impl<'a> ::hdx_parser::Peek<'a> for Foo {
    fn peek(parser: &::hdx_parser::Parser<'a>) -> Option<::hdx_lexer::Token> {
        use ::hdx_parser::Peek;
        parser.peek::<Length>()
    }
}
#[automatically_derived]
impl<'a> ::hdx_parser::Parse<'a> for Foo {
    fn parse(parser: &mut ::hdx_parser::Parser<'a>) -> ::hdx_parser::Result<Self> {
        use ::hdx_parser::Parse;
        let i = 0;
        let mut items = ::smallvec::smallvec![];
        loop {
            if i > 4usize {
                break;
            } else if parser.peek::<Length>().is_some() {
                let item = parser.parse::<Length>()?;
                items.push(item)
            } else {
                break;
            }
        }
        if i < 2usize {
            return Err(
                ::hdx_parser::diagnostics::Unexpected(parser.cur(), parser.span()),
            )?;
        }
        Ok(Self(items))
    }
}
#[automatically_derived]
impl<'a> ::hdx_writer::WriteCss<'a> for Foo {
    fn write_css<W: ::hdx_writer::CssWriter>(
        &self,
        sink: &mut W,
    ) -> ::hdx_writer::Result {
        use ::hdx_writer::WriteCss;
        for item in &self.0 {
            item.write_css(sink)?;
            sink.write_char(' ')?;
        }
        Ok(())
    }
}
